@@ -72,6 +72,15 @@ allprojects { Project prj ->
 		sourceCompatibility = javaVersion
 		targetCompatibility = javaVersion
 
+		tasks.withType(JavaCompile) {
+			options.compilerArgs += '--enable-preview'
+		}
+		tasks.withType(Javadoc) {
+		}
+		tasks.withType(Test) {
+			jvmArgs += "--enable-preview"
+		}
+
 		jar {
 			manifest {
 				attributes(
